General refactoring of Readersourcing. Some customization options moved to ReadersourcingToolkit.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -53,9 +53,9 @@
     "    \n",
     "    # CSV file parsing\n",
     "    \n",
-    "    info_filename = \"{}info.csv\".format(parameters.dataset_entries_path)\n",
-    "    ratings_filename = \"{}ratings.csv\".format(parameters.dataset_entries_path)\n",
-    "    authors_filename = \"{}authors.csv\".format(parameters.dataset_entries_path)\n",
+    "    ratings_filename = parameters.ratings_filename\n",
+    "    info_filename = parameters.info_filename\n",
+    "    authors_filename = parameters.authors_filename\n",
     "    \n",
     "    info = pd.read_csv(info_filename)\n",
     "    paper_authors = pd.read_csv(authors_filename)\n",
@@ -96,7 +96,7 @@
     "    # Data shuffling handling\n",
     "    \n",
     "    if parameters.data_shuffled:\n",
-    "        ratings_filename = \"{}shuffle_{}.csv\".format(parameters.dataset_shuffle_path, parameters.current_shuffle)\n",
+    "        ratings_filename = \"{}{}\".format(parameters.dataset_shuffle_path, parameters.shuffle_filename)\n",
     "    \n",
     "    # Output handling\n",
     "    \n",
@@ -122,10 +122,10 @@
     "    def serialize_result(current_index, verbose, parameters):\n",
     "                         \n",
     "        if parameters.data_shuffled:\n",
-    "            result_folder_path = \"{}shuffle_{}/\".format(parameters.result_shuffle_base_path, parameters.current_shuffle)\n",
+    "            result_folder_path = \"{}{}\".format(parameters.result_shuffle_base_path, parameters.result_shuffle_folder)\n",
     "        else:\n",
     "            if parameters.days_serialization:\n",
-    "                result_folder_path = \"{}day_{}/\".format(parameters.result_days_path, parameters.current_day)\n",
+    "                result_folder_path = \"{}{}\".format(parameters.result_days_base_path, parameters.result_day_folder)\n",
     "            else:\n",
     "                result_folder_path = parameters.result_folder_base_path\n",
     "        \n",
@@ -142,7 +142,7 @@
     "            {'Quantity': 'Author Score', 'Identifiers': authors.tolist(), 'Values': author_score.tolist()},\n",
     "        ]\n",
     "        \n",
-    "        result_quantities_filename = \"{}quantities.json\".format(result_folder_path, parameters.current_day)\n",
+    "        result_quantities_filename = \"{}{}\".format(result_folder_path, parameters.result_quantities_filename)\n",
     "        \n",
     "        if verbose:\n",
     "            print(\"------------------------------\")\n",
@@ -171,8 +171,8 @@
     "            rating_matrix[current_reader][current_paper] = current_rating\n",
     "            goodness_matrix[current_reader][current_paper] = rating_goodness[current_timestamp]\n",
     "        \n",
-    "        result_ratings_filename = \"{}ratings.csv\".format(result_folder_path, parameters.current_day)\n",
-    "        result_goodness_filename = \"{}goodness.csv\".format(result_folder_path, parameters.current_day)\n",
+    "        result_ratings_filename = \"{}{}\".format(result_folder_path, parameters.result_ratings_filename)\n",
+    "        result_goodness_filename = \"{}{}\".format(result_folder_path, parameters.result_goodness_filename)\n",
     "        \n",
     "        if verbose:\n",
     "            print(\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {}\".format(result_ratings_filename))\n",
@@ -203,7 +203,7 @@
     "        \n",
     "        dictionary = [{'Time': result_elapsed_time}]\n",
     "        \n",
-    "        result_info_filename = \"{}info.json\".format(result_folder_path, parameters.current_day)\n",
+    "        result_info_filename = \"{}{}\".format(result_folder_path, parameters.result_info_filename)\n",
     "        \n",
     "        if verbose:\n",
     "            print(\"PRINTING INFO TO .JSON FILE AT PATH {}\".format(result_info_filename))\n",
@@ -249,7 +249,7 @@
     "                    args=[file_path],\n",
     "                )\n",
     "                thread.daemon = True\n",
-    "                thread.start()\n",
+    "                thread.start()       \n",
     "        print(\"--------------------------------------\")\n",
     "    \n",
     "    # There are many \"print\" that you can uncomment if you have to do some debugging\n",
@@ -262,6 +262,7 @@
     "        if parameters.days_serialization:\n",
     "            if index % (ratings_number_per_day * computed_days) == 0:\n",
     "                parameters.current_day = computed_days\n",
+    "                parameters.update_day()\n",
     "                written = False\n",
     "                cleaned = False\n",
     "                if parameters.days_serialization_cleaning and computed_days % parameters.days_cleaning_threshold == 0 and not cleaned:\n",
@@ -397,6 +398,21 @@
     "        # print(\"##########\")\n",
     "    \n",
     "    elapsed_time, result_file_paths = serialize_result(ratings_number, verbose=True, parameters=parameters)\n",
+    "    \n",
+    "    if parameters.days_serialization:\n",
+    "        for root, dirs, files in os.walk(parameters.result_days_base_path, topdown=False):\n",
+    "                for name in dirs:\n",
+    "                    try:\n",
+    "                        if len(os.listdir( os.path.join(root, name) )) == 0: #check whether the directory is empty\n",
+    "                            print( \"Deleting empty folder: \", os.path.join(root, name) )\n",
+    "                            try:\n",
+    "                                os.rmdir( os.path.join(root, name) )\n",
+    "                            except:\n",
+    "                                pass\n",
+    "                    except:\n",
+    "                        pass\n",
+    "        print(\"--------------------------------------\")\n",
+    "    \n",
     "    print(\"ELAPSED TIME: \", elapsed_time)\n",
     "    \n",
     "    # ----- ALGORITHM ENDS HERE ----- #\n",
@@ -475,8 +491,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "---------------------------------\n----------- SHUFFLE 0 -----------\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-1e32684c7f1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"----------- SHUFFLE {} -----------\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex_shuffle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mseed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_shuffle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindex_shuffle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mreadersourcing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m      \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-e95269cc6d2f>\u001b[0m in \u001b[0;36mreadersourcing\u001b[1;34m(parameters)\u001b[0m\n\u001b[0;32m    285\u001b[0m         \u001b[0mold_paper_steadiness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpaper_steadiness\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpaper\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    286\u001b[0m         \u001b[0mold_paper_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpaper_score\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpaper\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 287\u001b[1;33m         \u001b[0mold_reader_steadiness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreader_steadiness\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    288\u001b[0m         \u001b[0mold_rating_goodness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrating_goodness\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    289\u001b[0m         \u001b[0mold_reader_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreader_score\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 2021 is out of bounds for axis 0 with size 2016"
+     ],
+     "ename": "IndexError",
+     "evalue": "index 2021 is out of bounds for axis 0 with size 2016",
+     "output_type": "error"
+    }
+   ],
    "source": [
     "# ------------------------------\n",
     "# ---------- SAMPLE 3 ----------\n",
@@ -497,12 +533,70 @@
     "        seed.current_shuffle = index_shuffle\n",
     "        readersourcing(seed)\n",
     "except ValueError as error:\n",
-    "     print(repr(error))"
+    "     print(repr(error))\n",
+    "     "
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "---------- DAY 2/10 ----------\n",
+      "845/4225 (20/100%)\n",
+      "---------- DAY 4/10 ----------\n",
+      "1690/4225 (40/100%)\n",
+      "--------------------------------------\n---------- CLEANING RESULTS ----------\nDeleting file at path:  ../models/test/readersourcing/days/day_2/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_2/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_2/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_2/info.json\nDeleting file at path:  ../models/test/readersourcing/days/day_4/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_4/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_4/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_4/info.json\n--------------------------------------\n",
+      "---------- DAY 6/10 ----------\n",
+      "2535/4225 (60/100%)\n",
+      "---------- DAY 8/10 ----------\n",
+      "3380/4225 (80/100%)\n",
+      "--------------------------------------\n---------- CLEANING RESULTS ----------\nDeleting file at path:  ../models/test/readersourcing/days/day_6/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_6/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_6/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_6/info.json\nDeleting file at path:  ../models/test/readersourcing/days/day_8/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_8/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_8/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_8/info.json\n--------------------------------------\n---------- DAY 10/10 ----------\n",
+      "4225/4225 (100/100%)\n------------------------------\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/test/readersourcing/days/day_10/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/test/readersourcing/days/day_10/ratings.csv\n",
+      "PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/test/readersourcing/days/day_10/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/test/readersourcing/days/day_10/info.json\n------------------------------\nDeleting empty folder:  ../models/test/readersourcing/days/day_2\nDeleting empty folder:  ../models/test/readersourcing/days/day_4\nDeleting empty folder:  ../models/test/readersourcing/days/day_6\nDeleting empty folder:  ../models/test/readersourcing/days/day_8\nELAPSED TIME:  29.256726264953613\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "     \n",
+    "# ------------------------------\n",
+    "# ---------- SAMPLE 4 ----------\n",
+    "# ------------------------------\n",
+    "\n",
+    "seed = ReadersourcingToolkit(\n",
+    "    dataset_name=\"seed_power_law_1\", \n",
+    "    dataset_folder_path=\"../data/{}/\", \n",
+    "    data_shuffled=True, \n",
+    "    current_shuffle = 0,\n",
+    "    shuffle_amount=100,\n",
+    "    shuffle_special=True\n",
+    ")\n",
+    "  \n",
+    "try:\n",
+    "    for index_shuffle in range(seed.shuffle_amount):\n",
+    "        print(\"---------------------------------\")\n",
+    "        print(\"----------- SHUFFLE {} -----------\".format(index_shuffle))\n",
+    "        seed.current_shuffle = index_shuffle\n",
+    "        readersourcing(seed)\n",
+    "except ValueError as error:\n",
+    "     print(repr(error))\n",
+    "     "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   }
