--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -480,12 +480,52 @@
     "try:\n",
     "   readersourcing(seed)\n",
     "except ValueError as error:\n",
-    "     print(repr(error))\n"
+    "     print(repr(error))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-937738b8bc09>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mreadersourcing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m      \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-a38934e99d30>\u001b[0m in \u001b[0;36mreadersourcing\u001b[1;34m(parameters)\u001b[0m\n\u001b[0;32m    341\u001b[0m         \u001b[0mprevious_ratings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprevious_ratings\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    342\u001b[0m         previous_ratings = previous_ratings[\n\u001b[1;32m--> 343\u001b[1;33m              \u001b[1;33m(\u001b[0m\u001b[0mprevious_ratings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    344\u001b[0m              \u001b[1;33m(\u001b[0m\u001b[0mprevious_ratings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpaper\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    345\u001b[0m         ]            \n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ],
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "# ------------------------------\n",
+    "# ---------- SAMPLE 3 ----------\n",
+    "# ------------------------------\n",
+    "\n",
+    "seed = ReadersourcingToolkit(\n",
+    "    dataset_name=\"seed_power_law_1\", \n",
+    "    dataset_folder_path=\"../data/{}/\", \n",
+    ")\n",
+    "  \n",
+    "try:\n",
+    "    readersourcing(seed)\n",
+    "except ValueError as error:\n",
+    "     print(repr(error))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
@@ -515,7 +555,7 @@
    ],
    "source": [
     "# ------------------------------\n",
-    "# ---------- SAMPLE 3 ----------\n",
+    "# ---------- SAMPLE 4 ----------\n",
     "# ------------------------------\n",
     "\n",
     "seed = ReadersourcingToolkit(\n",
@@ -546,31 +586,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- DAY 2/10 ----------\n",
-      "845/4225 (20/100%)\n",
-      "---------- DAY 4/10 ----------\n",
-      "1690/4225 (40/100%)\n",
-      "--------------------------------------\n---------- CLEANING RESULTS ----------\nDeleting file at path:  ../models/test/readersourcing/days/day_2/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_2/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_2/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_2/info.json\nDeleting file at path:  ../models/test/readersourcing/days/day_4/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_4/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_4/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_4/info.json\n--------------------------------------\n",
-      "---------- DAY 6/10 ----------\n",
-      "2535/4225 (60/100%)\n",
-      "---------- DAY 8/10 ----------\n",
-      "3380/4225 (80/100%)\n",
-      "--------------------------------------\n---------- CLEANING RESULTS ----------\nDeleting file at path:  ../models/test/readersourcing/days/day_6/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_6/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_6/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_6/info.json\nDeleting file at path:  ../models/test/readersourcing/days/day_8/ratings.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_8/goodness.csv\nDeleting file at path:  ../models/test/readersourcing/days/day_8/quantities.json\nDeleting file at path:  ../models/test/readersourcing/days/day_8/info.json\n--------------------------------------\n---------- DAY 10/10 ----------\n",
-      "4225/4225 (100/100%)\n------------------------------\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/test/readersourcing/days/day_10/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/test/readersourcing/days/day_10/ratings.csv\n",
-      "PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/test/readersourcing/days/day_10/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/test/readersourcing/days/day_10/info.json\n------------------------------\nDeleting empty folder:  ../models/test/readersourcing/days/day_2\nDeleting empty folder:  ../models/test/readersourcing/days/day_4\nDeleting empty folder:  ../models/test/readersourcing/days/day_6\nDeleting empty folder:  ../models/test/readersourcing/days/day_8\nELAPSED TIME:  29.256726264953613\n"
+      "---------------------------------\n----------- SHUFFLE 0 -----------\n"
      ],
      "output_type": "stream"
+    },
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-1b418ab5f67d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"----------- SHUFFLE {} -----------\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex_shuffle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mseed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_shuffle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindex_shuffle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mreadersourcing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m      \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-a38934e99d30>\u001b[0m in \u001b[0;36mreadersourcing\u001b[1;34m(parameters)\u001b[0m\n\u001b[0;32m    328\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    329\u001b[0m         \u001b[0mprevious_ratings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 330\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mratings_filename\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mrating_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    331\u001b[0m             \u001b[0mraw_previous_ratings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdeque\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrating_file\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsv_offset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mcsv_offset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    332\u001b[0m             \u001b[0mraw_previous_ratings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpopleft\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Ambienti\\Anaconda3\\lib\\_bootlocale.py\u001b[0m in \u001b[0;36mgetpreferredencoding\u001b[1;34m(do_setlocale)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplatform\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"win\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[1;32mdef\u001b[0m \u001b[0mgetpreferredencoding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdo_setlocale\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutf8_mode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;34m'UTF-8'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ],
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error"
     }
    ],
    "source": [
     "     \n",
     "# ------------------------------\n",
-    "# ---------- SAMPLE 4 ----------\n",
+    "# ---------- SAMPLE 5 ----------\n",
     "# ------------------------------\n",
     "\n",
     "seed = ReadersourcingToolkit(\n",
@@ -581,7 +623,7 @@
     "    shuffle_amount=100,\n",
     "    shuffle_special=True\n",
     ")\n",
-    "  \n",
+    "\n",
     "try:\n",
     "    for index_shuffle in range(seed.shuffle_amount):\n",
     "        print(\"---------------------------------\")\n",
