Additional experiments fully implemented. New data and results generated.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -12,7 +12,6 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import math as m\n",
     "import linecache\n",
     "from collections import deque\n",
@@ -570,7 +569,7 @@
     "    for index_shuffle in range(seed.shuffle_amount):\n",
     "        print(\"---------------------------------\")\n",
     "        print(\"----------- SHUFFLE {} -----------\".format(index_shuffle))\n",
-    "        seed.current_shuffle = index_shuffle\n",
+    "        seed.update_shuffle(index_shuffle)\n",
     "        readersourcing(seed)\n",
     "except ValueError as error:\n",
     "     print(repr(error))\n",
@@ -628,11 +627,10 @@
     "    for index_shuffle in range(seed.shuffle_amount):\n",
     "        print(\"---------------------------------\")\n",
     "        print(\"----------- SHUFFLE {} -----------\".format(index_shuffle))\n",
-    "        seed.current_shuffle = index_shuffle\n",
+    "        seed.update_shuffle(index_shuffle)\n",
     "        readersourcing(seed)\n",
     "except ValueError as error:\n",
-    "     print(repr(error))\n",
-    "     "
+    "     print(repr(error))"
    ],
    "metadata": {
     "collapsed": false,
