Experiments code refactoring.

--- a/notebooks/Experiments.ipynb
+++ b/notebooks/Experiments.ipynb
@@ -20,6 +20,7 @@
     "import math\n",
     "from scipy.stats.stats import pearsonr\n",
     "from scipy.stats.stats import kendalltau\n",
+    "from scipy.stats.stats import gmean\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -563,16 +564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "outputs": [
     {
      "name": "stdout",
      "text": [
       "---------- BUILDING PAPER SCORE DATAFRAME ----------\n",
-      "0/0 (100/100%)\n---------- BUILDING PAPER STEADINESS DATAFRAME ----------\n",
-      "0/0 (100/100%)\n---------- BUILDING READER SCORE DATAFRAME ----------\n",
-      "0/0 (100/100%)\n---------- BUILDING READER STEADINESS DATAFRAME ----------\n",
-      "0/0 (100/100%)\n"
+      "---------- BUILDING PAPER STEADINESS DATAFRAME ----------\n",
+      "---------- BUILDING READER SCORE DATAFRAME ----------\n",
+      "---------- BUILDING READER STEADINESS DATAFRAME ----------\n"
      ],
      "output_type": "stream"
     }
@@ -603,38 +603,24 @@
     "\n",
     "# Core Functions\n",
     "\n",
-    "def geo_mean(iterable):\n",
-    "    a = np.array(iterable)\n",
-    "    return a.prod()**(1.0/len(a))\n",
-    "\n",
     "def compute_means(raw_df, quantity_df, quantity_label, axis):\n",
+    "    \n",
+    "    raw_df.replace(0, np.nan, inplace=True)\n",
     "        \n",
     "    mean_df = pd.DataFrame(columns=[quantity_label])\n",
     "    mean_df[quantity_label] = quantity_df[\"Quantity\"]\n",
     "    mean_df[\"Arithmetic Mean\"] = raw_df.mean(axis=axis)\n",
-    "    mean_df[\"Geometric Mean\"] = raw_df.apply(geo_mean, axis=axis)\n",
-    "    mean_df[\"Median\"] = raw_df.mean(axis=axis)\n",
-    "    cols = []\n",
-    "    for col in raw_df.columns.values:\n",
-    "        cols.append(col)\n",
-    "    raw_df[\"v\"] = raw_df[cols].count(axis=1)    \n",
-    "    m = np.mean(raw_df['v'])\n",
-    "    raw_df['w'] = raw_df['v']/(raw_df['v'] + m)\n",
-    "    raw_df['r'] = np.mean(raw_df[cols], axis=1)\n",
-    "    c = np.mean(raw_df[cols].values.flatten())\n",
-    "    raw_df['b'] = raw_df['w']*raw_df['r'] + (1 - raw_df['w'])*c\n",
-    "    raw_df = raw_df.drop(['v', 'w', 'r'], axis=1)\n",
-    "    mean_df[\"Bayesian Mean\"] = raw_df[\"b\"]\n",
-    "    mean_df = mean_df.fillna(0)\n",
-    "        \n",
+    "    mean_df[\"Geometric Mean\"] = np.exp(np.log(raw_df.prod(axis=axis))/raw_df.notna().sum(axis))\n",
+    "    mean_df[\"Median\"] = raw_df.median(axis=axis)\n",
+    "    \n",
+    "    mean_df.dropna(inplace=True)\n",
+    "   \n",
     "    corr_df = pd.DataFrame(columns=[\n",
     "        \"Rho (Arithmetic Mean)\",\n",
     "        \"Rho (Geometric Mean)\",\n",
-    "        \"Rho (Bayesian Mean)\",\n",
     "        \"Rho (Median)\",\n",
     "        \"Tau (Arithmetic Mean)\",\n",
     "        \"Tau (Geometric Mean)\",\n",
-    "        \"Tau (Bayesian Mean)\",\n",
     "        \"Tau (Median)\",\n",
     "    ])\n",
     "    \n",
@@ -654,9 +640,9 @@
     "    corr_df = corr_df.append(dict, ignore_index=True)\n",
     "    \n",
     "    return corr_df, mean_df\n",
-    "    \n",
-    "ratings_df = seed.extract_ratings_df()\n",
     "\n",
+    "ratings_df = seed.extract_ratings_df()\n",
+    "    \n",
     "print(\"---------- BUILDING PAPER SCORE DATAFRAME ----------\")\n",
     "paper_score_df = seed.build_quantity_df(\"Paper Score\", 100)\n",
     "print(\"---------- BUILDING PAPER STEADINESS DATAFRAME ----------\")\n",
@@ -676,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "outputs": [
     {
      "name": "stdout",
@@ -692,8 +678,7 @@
     {
      "name": "stderr",
      "text": [
-      "C:\\Ambienti\\Anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py:3399: PearsonRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n  warnings.warn(PearsonRConstantInputWarning())\n",
-      "C:\\Ambienti\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:40: RuntimeWarning: overflow encountered in reduce\n  return umr_prod(a, axis, dtype, out, keepdims, initial)\n"
+      "C:\\Ambienti\\Anaconda3\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:959: RuntimeWarning: All-NaN slice encountered\n  result = np.apply_along_axis(_nanmedian1d, axis, a, overwrite_input)\n"
      ],
      "output_type": "stream"
     }
@@ -737,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "# Plotting Functions\n",
@@ -791,15 +776,6 @@
     "    print(\"Plot saved at path:\")\n",
     "    print(current_path)\n",
     "    \n",
-    "    current_path = \"{}{}_bayesian_mean_regplot.pdf\".format(plots_path, quantity_label)\n",
-    "    y_vals = sample[\"Bayesian Mean\"]\n",
-    "    ax = sns.regplot(x=x_vals, y=y_vals)\n",
-    "    custom_scatter(x_vals, y_vals, ax)\n",
-    "    ax.figure.savefig(current_path, bbox_inches=\"tight\")\n",
-    "    plt.close()\n",
-    "    print(\"Plot saved at path:\")\n",
-    "    print(current_path)\n",
-    "    \n",
     "    current_path = \"{}{}_median_regplot.pdf\".format(plots_path, quantity_label)\n",
     "    y_vals = sample[\"Median\"]\n",
     "    ax = sns.regplot(x=x_vals, y=y_vals)\n",
@@ -822,7 +798,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "---------- COMPUTING PLOTS FOR PAPER SCORE -----------\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/paper_score_arithmetic_mean_regplot.pdf\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/paper_score_geometric_mean_regplot.pdf\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/paper_score_median_regplot.pdf\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "sample = mean_df_1\n",
+    "draw_regplot(\"Paper Score\", sample, plots_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "---------- COMPUTING PLOTS FOR PAPER STEADINESS -----------\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/paper_steadiness_arithmetic_mean_regplot.pdf\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/paper_steadiness_geometric_mean_regplot.pdf\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/paper_steadiness_median_regplot.pdf\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "sample = mean_df_2\n",
+    "draw_regplot(\"Paper Steadiness\", sample, plots_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% \n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
@@ -830,31 +860,39 @@
       "---------- COMPUTING PLOTS FOR READER SCORE -----------\n",
       "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_score_arithmetic_mean_regplot.pdf\n",
       "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_score_geometric_mean_regplot.pdf\n",
-      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_score_bayesian_mean_regplot.pdf\n",
-      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_score_median_regplot.pdf\n---------- COMPUTING PLOTS FOR READER STEADINESS -----------\n",
-      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_arithmetic_mean_regplot.pdf\n",
-      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_geometric_mean_regplot.pdf\n",
-      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_bayesian_mean_regplot.pdf\n",
-      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_median_regplot.pdf\n"
-     ],
-     "output_type": "stream"
-    },
-    {
-     "name": "stderr",
-     "text": [
-      "C:\\Ambienti\\Anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py:3399: PearsonRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n  warnings.warn(PearsonRConstantInputWarning())\n",
-      "C:\\Ambienti\\Anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py:3399: PearsonRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n  warnings.warn(PearsonRConstantInputWarning())\n"
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_score_median_regplot.pdf\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "sample = mean_df_1\n",
-    "draw_regplot(\"Paper Score\", sample, plots_path)\n",
-    "sample = mean_df_2\n",
-    "draw_regplot(\"Paper Steadiness\", sample, plots_path)\n",
     "sample = mean_df_3\n",
-    "draw_regplot(\"Reader Score\", sample, plots_path) \n",
+    "draw_regplot(\"Reader Score\", sample, plots_path) "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "---------- COMPUTING PLOTS FOR READER STEADINESS -----------\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_arithmetic_mean_regplot.pdf\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_geometric_mean_regplot.pdf\n",
+      "Plot saved at path:\n../models/seed_power_law_1/readersourcing//experiments//experiment_1-c//plots/reader_steadiness_median_regplot.pdf\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
     "sample = mean_df_4\n",
     "draw_regplot(\"Reader Steadiness\", sample, plots_path) "
    ],
